--- a/Client_SDK/m4399RechargeSDK/res/layout/m4399_ope_dialog_common.xml
+++ b/Client_SDK/m4399RechargeSDK/res/layout/m4399_ope_dialog_common.xml
@@ -76,9 +76,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:layout_marginTop="12dp"
-        android:orientation="horizontal" 
-        android:paddingLeft="10dp"  
-        android:paddingRight="10dp">
+        android:orientation="horizontal"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp">
 
         <Button
             android:id="@+id/btn_dialog_left"
@@ -91,7 +91,9 @@
             android:paddingTop="10dp"
             android:textColor="#333333"
             android:textSize="18sp"
-            android:layout_marginRight="10dp" />
+            android:visibility="visible"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp" />
 
         <Button
             android:id="@+id/btn_dialog_right"
@@ -102,8 +104,11 @@
             android:gravity="center"
             android:paddingBottom="10dp"
             android:paddingTop="10dp"
+            android:visibility="visible"
             android:textColor="@android:color/white"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp" />
     </LinearLayout>
 
 </LinearLayout>
